# GestureRecognitionDevice

./: CMakeLists.txt  main.cpp  test.py
model-parameters/: model_metadata.h
pico_inference/: CMakeLists.txt
pico_inference/model-parameters/: model_variables.h
pico_inference/tflite-model/: tflite_learn_3_compiled.cpp
tflite-model/: tflite_learn_3_compiled.h
